force-app/main/default/objects/Contract__c/fields/Part_Time__c.field-meta.xml
<CustomField>
    <fullName>Part_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Part Time</label>
    <type>Checkbox</type>
</CustomField>