force-app/main/default/objects/Contract__c/validationRules/Start_Date_before_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_before_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c - End_Date__c &gt;= 0</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>Start Date can&apos;t be after End Date!</errorMessage>
</ValidationRule>