force-app/main/default/objects/Contract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Doctor__c</columns>
    <columns>Hospital__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>